--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "rsuite": "^5.61.0",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
